archive/unifi/service-unifi.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-network
  namespace: unifi-network
  annotations:
    metallb.universe.tf/address-pool: pool-vlan10-mon
spec:
  type: LoadBalancer
  loadBalancerIP: "192.168.10.150"
  selector:
    app: unifi-network
  ports:
    - name: https
      port: 8443
      targetPort: 8443
      protocol: TCP
    - name: http-inform
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: stun
      port: 3478
      targetPort: 3478
      protocol: UDP
    - name: discovery
      port: 10001
      targetPort: 10001
      protocol: UDP
